force-app/main/default/objects/Transaction_Card__c/Transaction_Card__c.object-meta.xml
<CustomObject>
    <label>כרטיס עסקה</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>שם כרטיס עסקה</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>כרטיס עסקה</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>