force-app/main/default/objects/Transaction_Card__c/fields/Acc_Addressing_phone_formula__c.field-meta.xml
<CustomField>
    <fullName>Acc_Addressing_phone_formula__c</fullName>
    <formula>Account_Addressing__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מספר הנייד של הפונה</label>
    <type>Text</type>
</CustomField>