force-app/main/default/objects/Transaction_Card__c/fields/Account_Addressing__c.field-meta.xml
<CustomField>
    <fullName>Account_Addressing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פונה</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>עסקאות</relationshipLabel>
    <relationshipName>Transaction_Card</relationshipName>
    <type>Lookup</type>
</CustomField>