force-app/main/default/objects/Transaction_Card__c/fields/Account_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Account_Passenger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>נוסע</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>כרטיס עסקה</relationshipLabel>
    <relationshipName>Account_Passenger</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>