force-app/main/default/objects/Transaction_Card__c/fields/actual_days_of_service__c.field-meta.xml
<CustomField>
    <fullName>actual_days_of_service__c</fullName>
    <formula>The_Actual_Return_Date__c   - Date_Of_Delivery_Device__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מספר ימי שירות בפועל</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>