force-app/main/default/objects/Transaction_Card__c/fields/Addressee_Is_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Is_Passenger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הפונה הוא גם הנוסע</label>
    <type>Checkbox</type>
</CustomField>