force-app/main/default/objects/Transaction_Card__c/fields/Addressee_Is_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Is_Presenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>פרזנטור</label>
    <type>Checkbox</type>
</CustomField>