force-app/main/default/objects/Transaction_Card__c/fields/AddressForDelivery__c.field-meta.xml
<CustomField>
    <fullName>AddressForDelivery__c</fullName>
    <label>כתובת למשלוח</label>
    <length>255</length>
    <type>Text</type>
</CustomField>