force-app/main/default/objects/Transaction_Card__c/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>שותף</label>
    <referenceTo>Affiliate__c</referenceTo>
    <relationshipLabel>כרטיס עסקה</relationshipLabel>
    <relationshipName>Transaction_Card</relationshipName>
    <type>Lookup</type>
</CustomField>