force-app/main/default/objects/Transaction_Card__c/fields/affiliator__c.field-meta.xml
<CustomField>
    <fullName>affiliator__c</fullName>
    <label>affiliator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>