force-app/main/default/objects/Transaction_Card__c/fields/Alert_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Email_Date__c</fullName>
    <description>MagnuSafety - this field will be populated with the date of the alert for upcoming subscription termination sent.</description>
    <label>Alert Email Date</label>
    <type>Date</type>
</CustomField>