force-app/main/default/objects/Transaction_Card__c/fields/All_Notes__c.field-meta.xml
<CustomField>
    <fullName>All_Notes__c</fullName>
    <label>הערות</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>