force-app/main/default/objects/Transaction_Card__c/fields/AllContacts__c.field-meta.xml
<CustomField>
    <fullName>AllContacts__c</fullName>
    <formula>Account_Passenger__r.PersonContact.Email+&apos;; &apos;+ Account_Passenger__r.Addressee_Email1__c +&apos;; &apos;+ Account_Passenger__r.Addressee_Email2__c +&apos;; &apos;+ Account_Passenger__r.Phone_G__c +&apos;; &apos;+ Account_Passenger__r.Addressee_phone1_G__c +&apos;; &apos;+ Account_Passenger__r.Addressee_phone2_G__c+&apos;; &apos;+ Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ריכוז אנשי קשר</label>
    <type>Text</type>
</CustomField>