force-app/main/default/objects/Transaction_Card__c/fields/Allow_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Duplicate</label>
    <type>Checkbox</type>
</CustomField>