force-app/main/default/objects/Transaction_Card__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>סכום ששולם בריקושט</description>
    <inlineHelpText>סכום ששולם בריקושט</inlineHelpText>
    <label>סכום עסקה בשקלים</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>