force-app/main/default/objects/Transaction_Card__c/fields/Area_10__c.field-meta.xml
<CustomField>
    <fullName>Area_10__c</fullName>
    <label>אזור 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>area_List</valueSetName>
    </valueSet>
</CustomField>