force-app/main/default/objects/Transaction_Card__c/fields/Area_11__c.field-meta.xml
<CustomField>
    <fullName>Area_11__c</fullName>
    <label>אזור 11</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>area_List</valueSetName>
    </valueSet>
</CustomField>