force-app/main/default/objects/Transaction_Card__c/fields/Backpacker__c.field-meta.xml
<CustomField>
    <fullName>Backpacker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מוצ&apos;ילר</label>
    <type>Checkbox</type>
</CustomField>