force-app/main/default/objects/Transaction_Card__c/fields/Balcony_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Nickname__c</fullName>
    <description>The nickname of the client in the Balcony app</description>
    <label>Balcony Nickname</label>
    <type>TextArea</type>
</CustomField>