force-app/main/default/objects/Transaction_Card__c/fields/Balcony_No__c.field-meta.xml
<CustomField>
    <fullName>Balcony_No__c</fullName>
    <description>The Balcony number of the user</description>
    <label>Balcony No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>