force-app/main/default/objects/Transaction_Card__c/fields/BatAmount__c.field-meta.xml
<CustomField>
    <fullName>BatAmount__c</fullName>
    <defaultValue>10</defaultValue>
    <label>מחיר סוללה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>