force-app/main/default/objects/Transaction_Card__c/fields/Batteries__c.field-meta.xml
<CustomField>
    <fullName>Batteries__c</fullName>
    <label>סוללות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>