force-app/main/default/objects/Transaction_Card__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <formula>Account_Passenger__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will present the Account Country&apos;s</inlineHelpText>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>