force-app/main/default/objects/Transaction_Card__c/fields/Canceled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Reason__c</fullName>
    <label>סיבה - לא מעוניין</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>מתחרים</fullName>
            </value>
            <value>
                <fullName>הנוסע לא רוצה</fullName>
            </value>
            <value>
                <fullName>אין צורך</fullName>
            </value>
            <value>
                <fullName>ביטוח בלבד</fullName>
            </value>
            <value>
                <fullName>לא פירט</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>