force-app/main/default/objects/Transaction_Card__c/fields/Card_Device__c.field-meta.xml
<CustomField>
    <fullName>Card_Device__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס מכשיר</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Card_Device__c.Inventory__c</field>
            <operation>equals</operation>
            <value>במלאי</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Card_Device__c</referenceTo>
    <relationshipLabel>כרטיס עסקה</relationshipLabel>
    <relationshipName>Transaction_Card</relationshipName>
    <type>Lookup</type>
</CustomField>