force-app/main/default/objects/Transaction_Card__c/fields/Card_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Card_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס מפיץ</label>
    <referenceTo>Card_Distributor__c</referenceTo>
    <relationshipLabel>כרטיס עסקה</relationshipLabel>
    <relationshipName>Card_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>