force-app/main/default/objects/Transaction_Card__c/fields/CityForDelivery__c.field-meta.xml
<CustomField>
    <fullName>CityForDelivery__c</fullName>
    <label>ישוב למשלוח</label>
    <length>255</length>
    <type>Text</type>
</CustomField>