force-app/main/default/objects/Transaction_Card__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>ID of the client, good for Israeli and foreign clients.
Could be Id or Passport number</description>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>