force-app/main/default/objects/Transaction_Card__c/fields/Confirmation_Of_Receipt_Form__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Of_Receipt_Form__c</fullName>
    <label>אישור על קבלת הטופס</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>מאושר</fullName>
            </value>
            <value>
                <fullName>לא מאושר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>