force-app/main/default/objects/Transaction_Card__c/fields/Cost_Calculated_Planned__c.field-meta.xml
<CustomField>
    <fullName>Cost_Calculated_Planned__c</fullName>
    <label>עלות מחושבת מתוכנן - ישן</label>
    <length>255</length>
    <type>Text</type>
</CustomField>