force-app/main/default/objects/Transaction_Card__c/fields/Cost_Calculated_Planned_N__c.field-meta.xml
<CustomField>
    <fullName>Cost_Calculated_Planned_N__c</fullName>
    <label>עלות מחושבת מתוכנן</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>