force-app/main/default/objects/Transaction_Card__c/fields/Cost_Calculated_Up_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Calculated_Up_To_Date__c</fullName>
    <label>עלות מחושבת שירות מעודכן</label>
    <length>255</length>
    <type>Text</type>
</CustomField>