force-app/main/default/objects/Transaction_Card__c/fields/Cost_Difference__c.field-meta.xml
<CustomField>
    <fullName>Cost_Difference__c</fullName>
    <label>הפרש עלות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>