force-app/main/default/objects/Transaction_Card__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>כמות</label>
    <type>Checkbox</type>
</CustomField>