force-app/main/default/objects/Transaction_Card__c/fields/Countries_10__c.field-meta.xml
<CustomField>
    <fullName>Countries_10__c</fullName>
    <label>מדינות 10</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_In_The_World</valueSetName>
    </valueSet>
</CustomField>