force-app/main/default/objects/Transaction_Card__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <label>קופון</label>
    <length>255</length>
    <type>Text</type>
</CustomField>