force-app/main/default/objects/Transaction_Card__c/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <label>כרטיס אשראי</label>
    <length>19</length>
    <type>Text</type>
</CustomField>