force-app/main/default/objects/Transaction_Card__c/fields/Credit_Card_S__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_S__c</fullName>
    <label>כרטיס אשראי מוצפן</label>
    <length>16</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>