force-app/main/default/objects/Transaction_Card__c/fields/CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditAmount__c</fullName>
    <label>סכום לחיוב אשראי</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>