force-app/main/default/objects/Transaction_Card__c/fields/Cuba__c.field-meta.xml
<CustomField>
    <fullName>Cuba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>קובה</label>
    <type>Checkbox</type>
</CustomField>