force-app/main/default/objects/Transaction_Card__c/fields/Cupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Cupon_Code__c</fullName>
    <description>This field is populated by SAT and will be providing the Discount + Affiliate from the Customer Settings &apos;&apos;.
Or it will be mapped manually by the user to calculate the discount agreed with the Affiliate per promotion.</description>
    <label>קוד קופון</label>
    <length>255</length>
    <type>Text</type>
</CustomField>