force-app/main/default/objects/Transaction_Card__c/fields/Customer_In_Israel__c.field-meta.xml
<CustomField>
    <fullName>Customer_In_Israel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>לקוח שמטייל בארץ</inlineHelpText>
    <label>לקוח בתוך ישראל</label>
    <type>Checkbox</type>
</CustomField>