force-app/main/default/objects/Transaction_Card__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>IF( Coupon__c = &apos;PASSPORTCARD&apos;,&quot;פספורטכארד&quot;,
IF( Affiliate__r.Name =&apos;Rikushet&apos;,&quot;ריקושט&quot;,
IF(  Mzongo__c = true, &quot;מזונגו&quot;,
IF(  Backpacker__c  = true,&quot;מוצ&apos;ילר&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>