force-app/main/default/objects/Transaction_Card__c/fields/cw__c.field-meta.xml
<CustomField>
    <fullName>cw__c</fullName>
    <label>cw</label>
    <length>3</length>
    <type>Text</type>
</CustomField>