force-app/main/default/objects/Transaction_Card__c/fields/Date_Of_Delivery_Device__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Delivery_Device__c</fullName>
    <label>תאריך איסוף המכשיר</label>
    <type>Date</type>
</CustomField>