force-app/main/default/objects/Transaction_Card__c/fields/Date_Of_Delivery_Device_for_Flow__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Delivery_Device_for_Flow__c</fullName>
    <formula>TEXT(YEAR(Date_Of_Delivery_Device__c)) &amp; &quot;-&quot; &amp;
TEXT(MONTH(Date_Of_Delivery_Device__c)) &amp; &quot;-&quot; &amp;
TEXT(DAY(Date_Of_Delivery_Device__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Delivery Device for Flow</label>
    <type>Text</type>
</CustomField>