force-app/main/default/objects/Transaction_Card__c/fields/Date_of_Device_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Device_Delivery__c</fullName>
    <formula>CASE( MOD( Date_Of_Return__c - DATE( 1900, 1, 6 ), 7 ), 
4, Date_Of_Return__c + 4, 
5, Date_Of_Return__c + 3, 
Date_Of_Return__c + 2 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תאריך החזרת מכשיר</label>
    <type>Date</type>
</CustomField>