force-app/main/default/objects/Transaction_Card__c/fields/Date_Of_Return__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Return__c</fullName>
    <label>תאריך חזרה לארץ</label>
    <type>Date</type>
</CustomField>