force-app/main/default/objects/Transaction_Card__c/fields/Date_Trip__c.field-meta.xml
<CustomField>
    <fullName>Date_Trip__c</fullName>
    <label>תאריך הנסיעה</label>
    <type>Date</type>
</CustomField>