force-app/main/default/objects/Transaction_Card__c/fields/Days_Of_Planned_Service__c.field-meta.xml
<CustomField>
    <fullName>Days_Of_Planned_Service__c</fullName>
    <formula>Scheduled_Return_Date__c -Date_Of_Delivery_Device__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מס&apos; ימי שירות מתוכנן</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>