force-app/main/default/objects/Transaction_Card__c/fields/Days_Of_Service_Up_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Of_Service_Up_To_Date__c</fullName>
    <formula>Return_Date_Updated__c  - Date_Of_Delivery_Device__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מס&apos; ימי שירות מעודכן</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>