force-app/main/default/objects/Transaction_Card__c/fields/Days_To_delivery_device__c.field-meta.xml
<CustomField>
    <fullName>Days_To_delivery_device__c</fullName>
    <formula>Date_Of_Delivery_Device__c -TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To delivery device</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>