force-app/main/default/objects/Transaction_Card__c/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <label>Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
                <isActive>false</isActive>
                <label>On-hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>