force-app/main/default/objects/Transaction_Card__c/fields/Delivery_Form__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Form__c</fullName>
    <formula>HYPERLINK(&quot;/apex/CustomerInvoice?id=&quot;+Id, &apos;תעודת משלוח&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>טופס משלוח</label>
    <type>Text</type>
</CustomField>