force-app/main/default/objects/Transaction_Card__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>מכשיר</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>מכשיר A</label>
            </value>
            <value>
                <fullName>SE+</fullName>
                <label>מכשיר SE+</label>
            </value>
            <value>
                <fullName>Mini</fullName>
                <label>מכשיר  mini</label>
            </value>
            <value>
                <fullName>MINI 2</fullName>
            </value>
            <value>
                <fullName>A - מטיילים בחול</fullName>
            </value>
            <value>
                <fullName>A - מטיילים בארץ</fullName>
            </value>
            <value>
                <fullName>MINI - מטיילים בחול</fullName>
            </value>
            <value>
                <fullName>MINI - מטיילים בארץ</fullName>
            </value>
            <value>
                <fullName>Iridium 9555</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>Messenger</fullName>
            </value>
            <value>
                <fullName>MINI 2 - מטיילים בארץ</fullName>
            </value>
            <value>
                <fullName>MINI 2 - מטיילים בחו&quot;ל</fullName>
            </value>
            <value>
                <fullName>Messenger - מטיילים בארץ</fullName>
            </value>
            <value>
                <fullName>Messenger - מטיילים בחו&quot;ל</fullName>
            </value>
            <value>
                <fullName>SE+ - מטיילים בארץ</fullName>
            </value>
            <value>
                <fullName>SE+ - מטיילים בחו&quot;ל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>