force-app/main/default/objects/Transaction_Card__c/fields/Device_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Device_Recipient__c</fullName>
    <label>מקבל המכשיר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>