force-app/main/default/objects/Transaction_Card__c/fields/device_take__c.field-meta.xml
<CustomField>
    <fullName>device_take__c</fullName>
    <description>שדה חדש שמחליף את כל שדות נתבג החל מדצבר 2020</description>
    <label>שיטת איסוף</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>איסוף ממשרדי Magnus</fullName>
            </value>
            <value>
                <fullName>שליח עד הבית</fullName>
            </value>
            <value>
                <fullName>איסוף מהיום להיום</fullName>
            </value>
            <value>
                <fullName>איסוף מסניף למטייל</fullName>
            </value>
            <value>
                <fullName>שליח עד הבית למטייל</fullName>
            </value>
            <value>
                <fullName>איסוף מנתב&quot;ג</fullName>
                <isActive>false</isActive>
                <label>איסוף מנתב&quot;ג</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>