force-app/main/default/objects/Transaction_Card__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <formula>TEXT(Card_Device__r.model__c)</formula>
    <label>דגם מכשיר</label>
    <type>Text</type>
</CustomField>