force-app/main/default/objects/Transaction_Card__c/fields/did_tuturial__c.field-meta.xml
<CustomField>
    <fullName>did_tuturial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עבר הדרכה</label>
    <type>Checkbox</type>
</CustomField>