force-app/main/default/objects/Transaction_Card__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>הנחה</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>