force-app/main/default/objects/Transaction_Card__c/fields/Dollar_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Exchange_Rate__c</fullName>
    <defaultValue>3.55</defaultValue>
    <label>שער דולר</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>