force-app/main/default/objects/Transaction_Card__c/fields/Email_Forms2__c.field-meta.xml
<CustomField>
    <fullName>Email_Forms2__c</fullName>
    <label>אימייל משני</label>
    <type>Email</type>
</CustomField>