force-app/main/default/objects/Transaction_Card__c/fields/Email_Forms__c.field-meta.xml
<CustomField>
    <fullName>Email_Forms__c</fullName>
    <label>אימייל ראשי</label>
    <type>Email</type>
</CustomField>