force-app/main/default/objects/Transaction_Card__c/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>This field is optional to be populated by the customer upon purchase, will contain the name of the emergency point of contact per purchase per customer.</description>
    <label>Emergency Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>