force-app/main/default/objects/Transaction_Card__c/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <description>This field is optional to be populated by the customer upon purchase, will contain the phone number of the emergeny point of contact per purchase per customer.</description>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>