force-app/main/default/objects/Transaction_Card__c/fields/Expiry_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MagnuSafety - will be mark once the email was sent.</description>
    <label>Expiry Email Sent</label>
    <type>Checkbox</type>
</CustomField>