force-app/main/default/objects/Transaction_Card__c/fields/Extend_Trip__c.field-meta.xml
<CustomField>
    <fullName>Extend_Trip__c</fullName>
    <formula>&quot;https://magnus.secure.force.com/apex/PriceRetCalc?id=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>טופס הארכת שירות</label>
    <type>Text</type>
</CustomField>