force-app/main/default/objects/Transaction_Card__c/fields/Extended_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Extended_Date_1__c</fullName>
    <description>Extended Date 1</description>
    <label>תאריך מורחב 1</label>
    <type>Date</type>
</CustomField>