force-app/main/default/objects/Transaction_Card__c/fields/Extended_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Extended_Date_2__c</fullName>
    <description>Extended_Date_2</description>
    <label>תאריך מורחב 2</label>
    <type>Date</type>
</CustomField>