force-app/main/default/objects/Transaction_Card__c/fields/Extended_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Extended_Date_3__c</fullName>
    <description>Extended_Date_3</description>
    <label>תאריך מורחב 3</label>
    <type>Date</type>
</CustomField>