force-app/main/default/objects/Transaction_Card__c/fields/Extra_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Extra_IMEI__c</fullName>
    <label>Extra IMEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>