force-app/main/default/objects/Transaction_Card__c/fields/Field10__c.field-meta.xml
<CustomField>
    <fullName>Field10__c</fullName>
    <defaultValue>false</defaultValue>
    <description>מכשיר בהכנה מספריים נתב&quot;ג</description>
    <label>ספייר נתב&quot;ג</label>
    <type>Checkbox</type>
</CustomField>