force-app/main/default/objects/Transaction_Card__c/fields/Field11__c.field-meta.xml
<CustomField>
    <fullName>Field11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>בדוח נתב&quot;ג</label>
    <type>Checkbox</type>
</CustomField>