force-app/main/default/objects/Transaction_Card__c/fields/Field12__c.field-meta.xml
<CustomField>
    <fullName>Field12__c</fullName>
    <defaultValue>false</defaultValue>
    <description>כשלקוח שפנה אלינו קבל הטבת פספורטכארד</description>
    <label>ממגנוס לפספורטכארד - הטבה ללא ליד</label>
    <type>Checkbox</type>
</CustomField>