force-app/main/default/objects/Transaction_Card__c/fields/Form_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_End_Date__c</fullName>
    <label>תאריך סיום טופס</label>
    <type>Date</type>
</CustomField>