force-app/main/default/objects/Transaction_Card__c/fields/Form_Password__c.field-meta.xml
<CustomField>
    <fullName>Form_Password__c</fullName>
    <label>סיסמה ישן</label>
    <length>255</length>
    <type>Text</type>
</CustomField>