force-app/main/default/objects/Transaction_Card__c/fields/Form_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Update_Date__c</fullName>
    <label>תאריך עדכון אחרון</label>
    <type>Date</type>
</CustomField>