force-app/main/default/objects/Transaction_Card__c/fields/Form_Username__c.field-meta.xml
<CustomField>
    <fullName>Form_Username__c</fullName>
    <label>שם משתמש ישן</label>
    <length>255</length>
    <type>Text</type>
</CustomField>