force-app/main/default/objects/Transaction_Card__c/fields/Friends__c.field-meta.xml
<CustomField>
    <fullName>Friends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>חינמים</label>
    <type>Checkbox</type>
</CustomField>