force-app/main/default/objects/Transaction_Card__c/fields/ID_Cardholder__c.field-meta.xml
<CustomField>
    <fullName>ID_Cardholder__c</fullName>
    <label>תז בעל כרטיס</label>
    <length>255</length>
    <type>Text</type>
</CustomField>