force-app/main/default/objects/Transaction_Card__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <formula>Card_Device__r.IMEI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMEI</label>
    <type>Text</type>
</CustomField>