force-app/main/default/objects/Transaction_Card__c/fields/IMEI_lmtyl1__c.field-meta.xml
<CustomField>
    <fullName>IMEI_lmtyl1__c</fullName>
    <description>IMEI של המכשיר שנאסף מסניף למטייל</description>
    <label>IMEI למטייל 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>