force-app/main/default/objects/Transaction_Card__c/fields/IMEI_lmtyl__c.field-meta.xml
<CustomField>
    <fullName>IMEI_lmtyl__c</fullName>
    <description>IMEI של המכשיר שנמסר בסניף למטייל</description>
    <label>IMEI למטייל</label>
    <length>255</length>
    <type>Text</type>
</CustomField>