force-app/main/default/objects/Transaction_Card__c/fields/Incident_Report__c.field-meta.xml
<CustomField>
    <fullName>Incident_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס אירוע</label>
    <referenceTo>Incident_Report__c</referenceTo>
    <relationshipLabel>כרטיס עסקה</relationshipLabel>
    <relationshipName>Incident_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>