force-app/main/default/objects/Transaction_Card__c/fields/India__c.field-meta.xml
<CustomField>
    <fullName>India__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הודו</label>
    <type>Checkbox</type>
</CustomField>