force-app/main/default/objects/Transaction_Card__c/fields/INS_Message__c.field-meta.xml
<CustomField>
    <fullName>INS_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>במידה והלקוח קיבל הודעת כלל או הראל</description>
    <label>הודעת ביטוח</label>
    <type>Checkbox</type>
</CustomField>