force-app/main/default/objects/Transaction_Card__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <label>Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>מגדל</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>ביטוח ישיר</fullName>
            </value>
            <value>
                <fullName>פספורטכארד</fullName>
            </value>
            <value>
                <fullName>הפניקס</fullName>
            </value>
            <value>
                <fullName>הראל</fullName>
            </value>
            <value>
                <fullName>כלל</fullName>
            </value>
            <value>
                <fullName>טרם נקבע</fullName>
            </value>
            <value>
                <fullName>שירביט</fullName>
            </value>
            <value>
                <fullName>מנורה</fullName>
            </value>
            <value>
                <fullName>הכשרה</fullName>
            </value>
            <value>
                <fullName>ביטוח חקלאי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>